Fix front-end alignment for sharing block.

--- a/assets/src/blocks/sharing/block.scss
+++ b/assets/src/blocks/sharing/block.scss
@@ -1,4 +1,4 @@
-.wp-block-openlab-modules-sharing {
+.clone-module-container {
 	.sharing-button-container {
 		display: flex;
 		justify-content: flex-end;
